Solved bug where background didn't appear when scrolling. Thank you x-overflow: hidden

--- a/src/app/styles/partials/_base.scss
+++ b/src/app/styles/partials/_base.scss
@@ -31,13 +31,14 @@ a {
 
 .container-fluid {
 	width: 100%;
+	margin: 0;
+	padding: 0;
 	position: absolute;
 	top: 0;
 	bottom: 0;
 	left: 0;
 	right: 0;
-	margin: 0;
-	padding: 0;
+	overflow-x: hidden;
 }
 
 footer {
